		-Battle option selection done
		-Other ally targeting done
		-Normal ally targeting done
2/12/23
	-Enemy targeting menu done
	-Other mode menu done (currently just supports NO SPELLS KNOWN, will eventually need to support camping)
	-Spell selection menu done, now supporting half casters!
	-Very basic mana related logic

	-Starting work on updating LUpdateMenuAdvancement

TODO:

	-Battle system rewrite
		-High/low battle logic? Would be preferable if possible
		
	-Campfire rendering
		-Give campfire battle-like scene?

	-Title on actual title screen?
	-Decouple button presses and position indicator from RDrawCharacterInfo, allowing it to be used on the title screen?

	Overarching questions:	
		-Should there be some sort of rangefinder to the exit? I think so.
			-Hear a "roar" when getting near the boss?
		-Rendering exit and campfire? Rendering campfire should be possible, but I don't know about the exit

	-Invalid text color  + associated logic?
		-Mana implementation
		-Play a corresponding "error" sound effect
	-How is enemy AI going to be stored?
		-Number of action slots, list of actual enemyAction bytes right after --Seems that this is not going to be a viable option anymore
			-This is very simplistic, but as a result is space-efficient
		-Number of action slots, list of meta-enemyActions
			-Meta-enemyActions might be along the lines of "attack", "heal ally", "paralyze enemy", etc.
			-These meta-actions are then converted into actual enemyAction by LDetermineEnemyAI routine
			-More sophisticated, less data space, more code space. Seems like a good idea
			-How smart should this be? Does it prefer to paralyze heavy physical attackers, for instance?
				-Probably not that smart
	-How is encounter data going to be stored?
		-Depends on whether or not certain groups of enemies should appear together
			-If not, then just have a list of which enemies can appear on which floors